<resources>
    <string name="app_name">My Application Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_date_time">DateTime</string>
    <string name="action_single_date_time">SingleDateTime</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_faq">FAQ</string>
    <string name="action_check_location">Check your location</string>

    <string name="google_maps_key">AIzaSyAroOQ5bWWbmNkWraN_hIxaop_5kDyYwtE</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_history">History</string>
    <string name="menu_faq">FAQ</string>

    <!-- Location  start -->
        <string name="latitude_label">Latitude</string>
        <string name="longitude_label">Longitude</string>

        <string name="no_location_detected">
            No location detected. Make sure location is enabled on the device.
        </string>

        <string name="permission_rationale">Location permission is needed for core functionality</string>
        <string name="permission_denied_explanation">Permission was denied, but is needed for core
            functionality.</string>
        <string name="settings">Settings</string>
    <!-- Location end -->

</resources>