<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_dateTime"
        android:orderInCategory="100"
        android:title="@string/action_date_time"
        app:showAsAction="never"
        android:onClick="dateTime"/>
    <item
        android:id="@+id/action_singleDateTime"
        android:orderInCategory="100"
        android:title="@string/action_single_date_time"
        app:showAsAction="never"
        android:onClick="singleDateTime"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"
        android:onClick="help"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:onClick="gotoFaq"
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:title="@string/action_faq"
        app:showAsAction="never"/>
</menu>